--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -12,11 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="190dp"
         android:text="@string/hello_first_fragment"
-        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="30sp"/>
 
     <Button
         android:id="@+id/firstBtnNext"
